# flipper_serprog

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot.yml
res/: application.fam
src/: flipper_serprog.icon  flipper_serprog.rs  main.rs
