[package]
name = "flipper_serprog"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "flipper_serprog"
bench = false
test = false

[dependencies]
flipperzero = "*"
flipperzero-alloc = "*"
flipperzero-rt = "*"
flipperzero-sys = "*"