[package]
name = "flipper_serprog"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "flipper_serprog"
bench = false
test = false

[dependencies]
flipperzero = "0.11.0"
flipperzero-alloc = "0.12.0"
flipperzero-rt = "0.11.0"
flipperzero-sys = "0.11.0"
